imerpub.internal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imerpub-service
spec:
  selector:
    app: imerpub
  ports:
    - port: 80
      targetPort: 80
