imerpub.internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imerpub-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - imerpub.internal
    secretName: tls-certificate
  rules:
  - host: imerpub.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imerpub-service
            port:
              number: 80
